# autoware.universe

localization/autoware_pose_instability_detector/: CHANGELOG.rst  CMakeLists.txt  package.xml
localization/autoware_pose_instability_detector/launch/: pose_instability_detector.launch.xml
localization/autoware_pose_instability_detector/src/: pose_instability_detector.cpp
localization/autoware_pose_instability_detector/test/: test.cpp
perception/autoware_simple_object_merger/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_simple_object_merger/launch/: simple_object_merger.launch.xml  simple_tracked_object_merger.launch.xml
perception/autoware_simple_object_merger/src/: simple_detected_object_merger_node.cpp  simple_object_merger_base.cpp  simple_tracked_object_merger_node.cpp
perception/autoware_traffic_light_arbiter/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_arbiter/src/: signal_match_validator.cpp  traffic_light_arbiter.cpp  traffic_light_arbiter_core.cpp
perception/autoware_traffic_light_arbiter/test/: test_traffic_arbiter_characteristic.cpp  test_traffic_light_arbiter_core.cpp  test_traffic_light_arbiter_integration.cpp
perception/autoware_traffic_light_category_merger/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_category_merger/src/: traffic_light_category_merger.cpp  traffic_light_category_merger.hpp  traffic_light_category_merger_node.cpp  traffic_light_category_merger_node.hpp
perception/autoware_traffic_light_category_merger/test/: test_traffic_light_category_merger.cpp  test_traffic_light_category_merger_integration.cpp
perception/autoware_traffic_light_classifier/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_traffic_light_classifier/src/: traffic_light_classifier.cpp  traffic_light_classifier.hpp  traffic_light_classifier_node.cpp  traffic_light_classifier_node.hpp
perception/autoware_traffic_light_classifier/src/classifier/: color_classifier.cpp  color_classifier.hpp
perception/autoware_traffic_light_classifier/test/: test_cnn_classifier.cpp  test_color_classifier.cpp  test_color_classifier_adapter.cpp  test_traffic_light_classifier.cpp  test_traffic_light_classifier_characteristics.cpp  test_traffic_light_classifier_integration.cpp
perception/perception_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/perception_utils/include/perception_utils/: detection_class_remapper.hpp  iou_bev_nms.hpp
perception/perception_utils/src/: detection_class_remapper.cpp  iou_bev_nms.cpp
perception/perception_utils/test/: detection_test_utils.hpp  test_detection_class_remapper.cpp  test_iou_bev_nms.cpp
planning/autoware_diffusion_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_diffusion_planner/config/: diffusion_planner.param.yaml
planning/autoware_diffusion_planner/launch/: diffusion_planner.launch.xml
planning/autoware_diffusion_planner/schema/: diffusion_planner.schema.json
planning/autoware_diffusion_planner/src/: diffusion_planner_core.cpp  diffusion_planner_node.cpp
planning/autoware_diffusion_planner/src/inference/: multi_step_inference.cpp  onnxruntime_inference.cpp  single_step_inference.cpp  utils.cpp
planning/autoware_diffusion_planner/src/postprocessing/: postprocessing_utils.cpp
planning/autoware_diffusion_planner/test/: diffusion_planner_integration_test.cpp
planning/autoware_trajectory_gate/: CMakeLists.txt  README.md  package.xml
planning/autoware_trajectory_gate/config/: trajectory_gate.param.yaml
planning/autoware_trajectory_gate/launch/: trajectory_gate.launch.xml
planning/autoware_trajectory_gate/src/: trajectory_gate.cpp  trajectory_gate.hpp
planning/autoware_trajectory_gate/src/core/: interface.cpp  interface.hpp  monitor.cpp  monitor.hpp  publisher.cpp  publisher.hpp  selector.cpp  selector.hpp  subscription.cpp  subscription.hpp
planning/autoware_trajectory_gate/test/: test_core_logic.cpp
planning/autoware_trajectory_processor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugins.xml
planning/autoware_trajectory_processor/config/: trajectory_modifier.param.yaml
planning/autoware_trajectory_processor/docs/: TrafficLightStop.md
planning/autoware_trajectory_processor/launch/: trajectory_modifier.launch.xml  trajectory_optimizer.launch.xml
planning/autoware_trajectory_processor/param/: trajectory_modifier_parameter_struct.yaml
planning/autoware_trajectory_processor/schema/: trajectory_modifier.schema.json
planning/autoware_trajectory_processor/src/: trajectory_modifier.cpp  trajectory_optimizer.cpp
planning/autoware_trajectory_processor/src/trajectory_modifier_plugins/: traffic_light_stop.cpp  velocity_modifier.cpp
planning/autoware_trajectory_processor/src/trajectory_modifier_utils/: obstacle_stop_utils.cpp  (+1 more)
planning/autoware_trajectory_processor/tests/: test_obstacle_stop_integration.cpp  test_stop_point_fixer_integration.cpp  test_surround_obstacle_stop_integration.cpp  test_traffic_light_stop_integration.cpp  test_trajectory_modifier.cpp  test_trajectory_optimizer.cpp  test_trajectory_processor_integration.cpp  test_utils.cpp  test_utils.hpp  test_velocity_modifier_integration.cpp  visualize_trajectories.py
planning/autoware_trajectory_selector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
planning/autoware_trajectory_selector/param/: parameter_struct.yaml
planning/autoware_trajectory_selector/schema/: trajectory_selector.schema.json
planning/autoware_trajectory_selector/src/: trajectory_selector_node.cpp
system/autoware_component_state_monitor/: CHANGELOG.rst  CMakeLists.txt  package.xml
system/autoware_component_state_monitor/launch/: component_state_monitor.launch.py
system/autoware_component_state_monitor/src/: main.cpp  main.hpp
system/autoware_processing_time_checker/: CHANGELOG.rst  CMakeLists.txt  package.xml
system/autoware_processing_time_checker/launch/: processing_time_checker.launch.xml
system/autoware_processing_time_checker/src/: processing_time_checker.cpp  processing_time_checker.hpp
(+1558 files in other folders)
