<?xml version="1.0"?>
<package format="3">
  <name>autoware_trajectory_processor</name>
  <version>0.52.0</version>
  <description>The autoware_trajectory_processor package for combined trajectory modification and optimization</description>

  <maintainer email="maxime.clement@tier4.jp">Maxime CLEMENT</maintainer>
  <maintainer email="alqudah.mohammad@tier4.jp">Alqudah Mohammad</maintainer>
  <maintainer email="daniel.sanchez@tier4.jp">Daniel Sanchez</maintainer>
  <maintainer email="yukihiro.saito@tier4.jp">Yukihiro Saito</maintainer>
  <maintainer email="go.sakayori@tier4.jp">Go Sakayori</maintainer>
  <maintainer email="shintaro.sakoda@tier4.jp">Shintaro Sakoda</maintainer>

  <license>Apache License 2.0</license>

  <author email="maxime.clement@tier4.jp">Maxime CLEMENT</author>

  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_agnocast_wrapper</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_internal_planning_msgs</depend>
  <depend>autoware_motion_utils</depend>
  <depend>autoware_obstacle_proximity_checker</depend>
  <depend>autoware_osqp_interface</depend>
  <depend>autoware_path_optimizer</depend>
  <depend>autoware_path_smoother</depend>
  <depend>autoware_planning_factor_interface</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_qp_interface</depend>
  <depend>autoware_signal_processing</depend>
  <depend>autoware_traffic_light_compliance_checker</depend>
  <depend>autoware_trajectory</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_utils_debug</depend>
  <depend>autoware_utils_math</depend>
  <depend>autoware_utils_rclcpp</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>autoware_core_planning</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>autoware_test_utils</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
